# ACVD

./: .travis.yml  ACVD.json  CMakeLists.txt
vtkDiscreteRemeshing/: CMakeLists.txt
vtkDiscreteRemeshing/Examples/: ACVD.cxx  ACVDQ.cxx  AnisotropicRemeshing.cxx  AnisotropicRemeshingQ.cxx  ManifoldSimplification.cxx  VolumeAnalysis.cxx
vtkDiscreteRemeshing/include/: vtkAnisotropicDiscreteRemeshing.h  vtkAnisotropicMetricForClustering.h  vtkClusteringExampleFile.h  vtkDiscreteRemeshing.h  vtkIsotropicDiscreteRemeshing.h  vtkIsotropicMetricForClustering.h  vtkL21MetricForClustering.h  vtkLloydClustering.h  vtkManifoldSimplification.h  (+6 more)
vtkSurface/: CMakeLists.txt
vtkSurface/Examples/: CheckOrientation.cxx  CleanMesh.cxx  ExamplevtkSurface.cxx  RandomTriangulation.cxx  mesh2vtk.cxx  stl2ply.cxx  viewer.cxx  viewer2.cxx  vtk2ply.cxx
vtkSurface/include/: RenderWindow.h  vtkCurvatureMeasure.h  vtkDelaunay.h  vtkDualMeshDisplay.h  vtkMyMinimalStandardRandomSequence.h  vtkNeighbourhoodComputation.h  vtkQuadricTools.h  vtkRandomTriangulation.h  vtkSMFReader.h  vtkSMFWriter.h  vtkSurface.h  vtkSurfaceBase.h  vtkSurfaceIterators.h  vtkTag.h  vtkUniformClustering.h  vtkVolumeProperties.h
vtkSurface/src/: RenderWindow.cxx  sampleMesh.cxx  vtkCurvatureMeasure.cxx  vtkDelaunay.cxx  vtkDualMeshDisplay.cxx  vtkMyMinimalStandardRandomSequence.cxx  vtkNeighbourhoodComputation.cxx  vtkOFFReader.cxx  vtkOFFWriter.cxx  vtkQuadricTools.cxx  vtkRandomTriangulation.cxx  vtkSMFReader.cxx  vtkSurface.cxx  vtkSurfaceBase.cxx  vtkVolumeProperties.cxx
vtkVolumeProcessing/: CMakeLists.txt
(+27 files in other folders)
